# subcoin

./: .gitignore  Cargo.toml  Cargo.toml.local  Cross.toml  Dockerfile  Dockerfile.aarch64  LICENSE  README.md  clippy.toml  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.cargo/: config.toml
book/: 404.html  architecture.html  design-notes.html  dumptxoutset.html  getting_started.html  import-bitcoind-blocks.html  index.html  installation.html  print.html  run-a-node.html  searchindex.js  searchindex.json  usage.html
crates/pallet-bitcoin/: Cargo.toml
crates/pallet-bitcoin/benches/: utxo_storage.rs
crates/pallet-bitcoin/src/: lib.rs  mock.rs  tests.rs  types.rs
crates/pallet-executive/: Cargo.toml
crates/pallet-executive/src/: lib.rs  tests.rs
crates/sc-consensus-nakamoto/: Cargo.toml
crates/sc-consensus-nakamoto/src/: aux_schema.rs  block_executor.rs  block_import.rs  block_preparation.rs  chain_params.rs  import_queue.rs  lib.rs  metrics.rs  script.rs  verification.rs  verifier.rs
crates/sc-consensus-nakamoto/src/script/: bytes.rs  interpreter.rs
crates/sc-consensus-nakamoto/src/verification/: header_verifier.rs  header_verify.rs  script_verify.rs  tx_verify.rs
crates/sc-fast-sync-backend/: Cargo.toml
crates/sc-fast-sync-backend/src/: chain_state.rs  lib.rs
crates/subcoin-bitcoin-state/: Cargo.toml
crates/subcoin-bitcoin-state/src/: checkpoints.json  checkpoints.rs  coin.rs  error.rs  lib.rs  storage.rs  undo.rs
crates/subcoin-bitcoin-state/tests/: utxo_sync_e2e.rs
crates/subcoin-indexer/: Cargo.toml
crates/subcoin-indexer/migrations/2024-10-05-154509_create_addresses/: down.sql  up.sql
crates/subcoin-indexer/src/: db.rs  in_mem.rs  indexer.rs  indexers.rs  lib.rs  postgres.rs  queries.rs  transaction_indexer.rs  types.rs
crates/subcoin-indexer/src/indexers/: btc.rs
crates/subcoin-indexer/src/postgres/: models.rs  schema.rs
crates/subcoin-informant/: Cargo.toml
crates/subcoin-informant/src/: display.rs  lib.rs
crates/subcoin-memory-pool/: Cargo.toml
crates/subcoin-memory-pool/src/: adapter.rs  arena.rs  coins_view.rs  inner.rs  lib.rs  options.rs  policy.rs  types.rs  validation.rs
crates/subcoin-memory-pool/src/policy/: ephemeral_policy.rs
crates/subcoin-memory-pool/src/tests/: mod.rs  rbf_tests.rs
crates/subcoin-mempool/: Cargo.toml
crates/subcoin-mempool/src/: arena.rs  coins_view.rs  error.rs  inner.rs  lib.rs  options.rs  policy.rs  types.rs  validation.rs
crates/subcoin-mempool/src/tests/: package_tests.rs
crates/subcoin-network/: Cargo.toml
crates/subcoin-network/src/: address_book.rs  block_downloader.rs  checkpoint.rs  connection.rs  lib.rs  metrics.rs  net_processor.rs  network.rs  network_api.rs  network_processor.rs  peer_connection.rs  peer_manager.rs  peer_store.rs  strategy.rs  sync.rs  tests.rs  transaction_manager.rs  tx_relay.rs  worker.rs
crates/subcoin-network/src/block_downloader/: blocks_first.rs  headers_first.rs
crates/subcoin-network/src/strategy/: blocks_first.rs  headers_first.rs
crates/subcoin-network/src/sync/: block_downloader.rs  orphan_blocks_pool.rs
crates/subcoin-network/src/sync/strategy/: blocks_first.rs  headers_first.rs
crates/subcoin-node/: Cargo.toml
crates/subcoin-node/res/: chain-spec-raw-bitcoin-mainnet.json
crates/subcoin-node/src/: cli.rs  commands.rs  indexer.rs  lib.rs  main.rs  rpc.rs  rpc_client.rs  substrate_cli.rs  transaction_pool.rs  utils.rs
crates/subcoin-node/src/cli/: params.rs  rpc_params.rs  subcoin_params.rs
crates/subcoin-node/src/commands/: blockchain.rs  import_blocks.rs  import_chain_state.rs  run.rs  tools.rs
crates/subcoin-node/src/commands/blockchain/: dump_txout_set.rs  dumptxoutset.rs  get_txout_set_info.rs  parse_block.rs  parse_block_outputs.rs  parse_txout_set.rs
crates/subcoin-primitives/: Cargo.toml
crates/subcoin-primitives/src/: consensus.rs  lib.rs  tx_pool.rs
crates/subcoin-rpc/: Cargo.toml
crates/subcoin-rpc-bitcoind/: Cargo.toml
crates/subcoin-rpc-bitcoind/src/: blockchain.rs  error.rs  lib.rs  mempool.rs  mining.rs  network.rs  rawtx.rs  types.rs
crates/subcoin-rpc/src/: address.rs  blockchain.rs  error.rs  lib.rs  network.rs  raw_transactions.rs  subcoin.rs
crates/subcoin-runtime/: Cargo.toml  build.rs
crates/subcoin-runtime-primitives/: Cargo.toml
crates/subcoin-runtime-primitives/src/: lib.rs
crates/subcoin-runtime/src/: lib.rs
crates/subcoin-script/: Cargo.toml
crates/subcoin-script/src/: bytes.rs  constants.rs  error.rs  flags.rs  interpreter.rs  lib.rs  num.rs  opcode.rs  signature_checker.rs  solver.rs  stack.rs  tests.rs  utils.rs
crates/subcoin-script/src/interpreter/: constants.rs  eval.rs  multisig.rs  sig.rs  verify.rs
crates/subcoin-script/src/interpreter/eval/: multisig.rs  sig.rs
crates/subcoin-script/src/tests/: interpreter.rs  opcode.rs  witness.rs  witness_tests.rs
crates/subcoin-service/: Cargo.toml
crates/subcoin-service/src/: block_executor.rs  chain_spec.rs  finalizer.rs  genesis_block_builder.rs  indexer.rs  lib.rs  network_request_handler.rs  transaction_adapter.rs  transaction_pool.rs
crates/subcoin-snapcake/: Cargo.toml
crates/subcoin-snapcake/src/: cli.rs  main.rs  network.rs  params.rs  snapshot_manager.rs  snapshot_processor.rs  state_sync_wrapper.rs  syncing_strategy.rs  utxo_store.rs  utxo_sync.rs
crates/subcoin-snapcake/tmp/chains/mainnet/db/full/: IDENTITY  LOG  OPTIONS-000035  OPTIONS-000037
crates/subcoin-snapcake/tmp/chains/mainnet/network/: secret_ed25519
crates/subcoin-state-fetcher/: Cargo.toml
crates/subcoin-state-fetcher/src/: cli.rs  main.rs
crates/subcoin-state-sync-node/: Cargo.toml
crates/subcoin-state-sync-node/src/: cli.rs  main.rs  network.rs  syncing_strategy.rs
crates/subcoin-test-service/: Cargo.toml
crates/subcoin-test-service/src/: lib.rs
crates/subcoin-utils/: Cargo.toml
crates/subcoin-utils/src/: lib.rs
crates/subcoin-utxo-snapshot/: Cargo.toml
crates/subcoin-utxo-snapshot/src/: compressor.rs  lib.rs  script.rs  serialize.rs  tests.rs
docs/: book.toml  (+2 more)
(+829 files in other folders)
