[workspace.package]
version = "0.1.0"
authors = ["xuliuchengxlc@gmail.com"]
edition = "2024"
repository = "https://github.com/subcoin-project/subcoin.git"
license = "MIT"

[workspace]
resolver = "2"

members = [
    "crates/pallet-bitcoin",
    "crates/pallet-executive",
    "crates/sc-consensus-nakamoto",
    "crates/subcoin-crypto",
    "crates/subcoin-indexer",
    "crates/subcoin-informant",
    "crates/subcoin-network",
    "crates/subcoin-node",
    "crates/subcoin-primitives",
    "crates/subcoin-rpc",
    "crates/subcoin-runtime",
    "crates/subcoin-runtime-primitives",
    "crates/subcoin-script",
    "crates/subcoin-service",
    "crates/subcoin-snapcake",
    "crates/subcoin-test-service",
    "crates/subcoin-utxo-snapshot",
]

default-members = [
    "crates/subcoin-node",
    "crates/subcoin-snapcake",
]

[workspace.dependencies]
array-bytes = "6.2.2"
async-channel = "1.8.0"
async-trait = "0.1"
bincode = "1.3.3"
bitcoin = { git = "https://github.com/liuchengxu/rust-bitcoin", rev = "1a24197c4ad4065963a006ef553cb1eec993720e", default-features = false }
bitcoinconsensus = "0.105.0+25.1"
bitcoin-explorer = { git = "https://github.com/liuchengxu/Rusty-Bitcoin-Explorer", branch = "main", default-features = false }
bitflags = "2.6.0"
chrono = "0.4.37"
clap = { version = "4", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
console = "0.15.8"
csv = "1.3.0"
fastrand = "2.0.2"
futures = "0.3"
futures-timer = "3.0.1"
hex = "0.4"
hex-literal = "0.4.1"
indexmap = "2.2.6"
indicatif = "0.17.9"
ip_network = "0.4.1"
jsonrpsee = { version = "0.24.3", features = ["server"] }
log = { version = "0.4", default-features = false }
num-bigint = "0.4.6"
num-traits = "0.2.19"
parking_lot = "0.12"
scale-info = { version = "2.11.6", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.9.9"
tempfile = "3.10.1"
thiserror = "1.0"
tokio = "1.41.1"
tracing = "0.1"

# Disable the default `rocksdb` feature
# frame-benchmarking-cli = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
frame-support = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
frame-system = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
frame-try-runtime = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
pallet-balances = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
pallet-transaction-payment = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
# Disable the default `rocksdb` feature
sc-cli = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sc-client-api = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-consensus = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-executor = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-informant = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-network = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-network-common = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-network-sync = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-rpc = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-rpc-api = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
# Disable the default `rocksdb` feature
sc-service = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sc-storage-monitor = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-sysinfo = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-telemetry = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-tracing = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-transaction-pool = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-transaction-pool-api = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sc-utils = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sp-api = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-blockchain = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-block-builder = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-consensus = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-core = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-database = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-genesis-builder = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-keyring = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sp-keystore = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sp-inherents = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-io = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-rpc = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sp-runtime = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-state-machine = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
sp-std = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-storage = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-tracing = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-transaction-pool = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-trie = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
sp-version = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
substrate-build-script-utils = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
substrate-frame-rpc-system = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }
substrate-prometheus-endpoint = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8", default-features = false }
substrate-wasm-builder = { git = "https://github.com/subcoin-project/polkadot-sdk", branch = "subcoin-v8" }

# This crate must use the same bitcoin dep above.
txoutset = { git = "https://github.com/liuchengxu/txoutset", branch = "subcoin" }

pallet-bitcoin = { path = "crates/pallet-bitcoin", default-features = false }
pallet-executive = { path = "crates/pallet-executive", default-features = false }
sc-consensus-nakamoto = { path = "crates/sc-consensus-nakamoto" }
subcoin-crypto = { path = "crates/subcoin-crypto" }
subcoin-indexer = { path = "crates/subcoin-indexer" }
subcoin-informant = { path = "crates/subcoin-informant" }
subcoin-network = { path = "crates/subcoin-network" }
subcoin-node = { path = "crates/subcoin-node" }
subcoin-primitives = { path = "crates/subcoin-primitives" }
subcoin-rpc = { path = "crates/subcoin-rpc" }
subcoin-runtime = { path = "crates/subcoin-runtime" }
subcoin-runtime-primitives = { path = "crates/subcoin-runtime-primitives", default-features = false }
subcoin-script = { path = "crates/subcoin-script" }
subcoin-service = { path = "crates/subcoin-service" }
subcoin-test-service = { path = "crates/subcoin-test-service" }
subcoin-utxo-snapshot = { path = "crates/subcoin-utxo-snapshot" }

[profile.release]
panic = "abort"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
lto = "fat"       # https://doc.rust-lang.org/rustc/linker-plugin-lto.html
codegen-units = 1 # https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units

[profile.profiling]
inherits = "release"
debug = true
