[workspace.package]
version = "0.1.0"
authors = ["xuliuchengxlc@gmail.com"]
edition = "2024"
repository = "https://github.com/subcoin-project/subcoin.git"
license = "MIT"

[workspace]
resolver = "2"

members = [
    "crates/pallet-bitcoin",
    "crates/pallet-executive",
    "crates/sc-consensus-nakamoto",
    "crates/subcoin-crypto",
    "crates/subcoin-indexer",
    "crates/subcoin-informant",
    "crates/subcoin-network",
    "crates/subcoin-node",
    "crates/subcoin-primitives",
    "crates/subcoin-rpc",
    "crates/subcoin-rpc-bitcoind",
    "crates/subcoin-runtime",
    "crates/subcoin-runtime-primitives",
    "crates/subcoin-script",
    "crates/subcoin-service",
    "crates/subcoin-snapcake",
    "crates/subcoin-test-service",
    "crates/subcoin-mempool",
    "crates/subcoin-utxo-snapshot",
]

default-members = [
    "crates/subcoin-node",
    "crates/subcoin-snapcake",
]

[workspace.dependencies]
array-bytes = "6.2.2"
async-channel = "1.8.0"
async-trait = "0.1"
bincode = "1.3.3"
bitcoin = { git = "https://github.com/liuchengxu/rust-bitcoin", rev = "1a24197c4ad4065963a006ef553cb1eec993720e", default-features = false }
bitcoinconsensus = "0.105.0+25.1"
bitcoin-explorer = { git = "https://github.com/liuchengxu/Rusty-Bitcoin-Explorer", branch = "main", default-features = false }
bitflags = "2.6.0"
chrono = "0.4.37"
clap = { version = "4", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
console = "0.15.8"
criterion = "0.5"
csv = "1.3.0"
fastrand = "2.0.2"
futures = "0.3"
futures-timer = "3.0.1"
hex = "0.4"
hex-literal = "0.4.1"
indexmap = "2.2.6"
indicatif = "0.17.9"
ip_network = "0.4.1"
jsonrpsee = { version = "0.24.3", features = ["server"] }
log = { version = "0.4", default-features = false }
num-bigint = "0.4.6"
num-traits = "0.2.19"
parking_lot = "0.12"
rayon = "1.10"
scale-info = { version = "2.11.6", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.9.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3.10.1"
thiserror = "1.0"
tokio = "1.41.1"
tracing = "0.1"

# Using local polkadot-sdk fork with direct state import API
frame-executive = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/executive", default-features = false }
frame-support = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/system", default-features = false }
frame-system-rpc-runtime-api = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/try-runtime", default-features = false }
pallet-balances = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-transaction-payment = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
sc-cli = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/cli", default-features = false }
sc-client-api = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/api" }
sc-consensus = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/consensus/common" }
sc-executor = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/executor" }
sc-informant = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/informant" }
sc-network = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/network" }
sc-network-common = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/network/common" }
sc-network-sync = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/network/sync" }
sc-rpc = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/rpc" }
sc-rpc-api = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/rpc-api" }
sc-service = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/service", default-features = false }
sc-storage-monitor = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/storage-monitor" }
sc-sysinfo = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/sysinfo" }
sc-telemetry = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/telemetry" }
sc-tracing = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/tracing" }
sc-transaction-pool = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/transaction-pool/api" }
sc-utils = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/client/utils" }
sp-api = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/api", default-features = false }
sp-blockchain = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/blockchain", default-features = false }
sp-block-builder = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-consensus = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/consensus/common", default-features = false }
sp-core = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/core", default-features = false }
sp-database = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/database", default-features = false }
sp-genesis-builder = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
sp-keyring = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/keyring" }
sp-keystore = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/keystore" }
sp-inherents = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-io = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/io", default-features = false }
sp-rpc = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/rpc" }
sp-runtime = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-state-machine = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/state-machine" }
sp-std = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/std", default-features = false }
sp-storage = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/storage", default-features = false }
sp-tracing = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/tracing", default-features = false }
sp-transaction-pool = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
sp-trie = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/trie", default-features = false }
sp-version = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/primitives/version", default-features = false }
substrate-build-script-utils = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/utils/build-script-utils" }
substrate-frame-rpc-system = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/utils/frame/rpc/system" }
substrate-prometheus-endpoint = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/utils/prometheus", default-features = false }
substrate-wasm-builder = { path = "/mnt/Zhitai0/src/github.com/subcoin-project/polkadot-sdk/substrate/utils/wasm-builder" }

# This crate must use the same bitcoin dep above.
txoutset = { git = "https://github.com/liuchengxu/txoutset", branch = "subcoin" }

pallet-bitcoin = { path = "crates/pallet-bitcoin", default-features = false }
pallet-executive = { path = "crates/pallet-executive", default-features = false }
sc-consensus-nakamoto = { path = "crates/sc-consensus-nakamoto" }
subcoin-crypto = { path = "crates/subcoin-crypto" }
subcoin-indexer = { path = "crates/subcoin-indexer" }
subcoin-informant = { path = "crates/subcoin-informant" }
subcoin-network = { path = "crates/subcoin-network" }
subcoin-node = { path = "crates/subcoin-node" }
subcoin-primitives = { path = "crates/subcoin-primitives" }
subcoin-rpc = { path = "crates/subcoin-rpc" }
subcoin-rpc-bitcoind = { path = "crates/subcoin-rpc-bitcoind" }
subcoin-runtime = { path = "crates/subcoin-runtime" }
subcoin-runtime-primitives = { path = "crates/subcoin-runtime-primitives", default-features = false }
subcoin-script = { path = "crates/subcoin-script" }
subcoin-service = { path = "crates/subcoin-service" }
subcoin-test-service = { path = "crates/subcoin-test-service" }
subcoin-mempool = { path = "crates/subcoin-mempool" }
subcoin-utxo-snapshot = { path = "crates/subcoin-utxo-snapshot" }

[profile.release]
panic = "abort"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
lto = "fat"       # https://doc.rust-lang.org/rustc/linker-plugin-lto.html
codegen-units = 1 # https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units

[profile.profiling]
inherits = "release"
debug = true
