[package]
name = "pallet-executive"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME executives engine"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
aquamarine = "0.5.0"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
log = { workspace = true }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }

[dev-dependencies]
array-bytes = "6.2.2"
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-version = { workspace = true }

[features]
default = ["std"]
with-tracing = ["sp-tracing/with-tracing"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/experimental",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"log/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-version/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]
