[package]
name = "sc-consensus-nakamoto"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true, features = ["bitcoinconsensus"] }
bitcoinconsensus = { workspace = true }
clap = { workspace = true, optional = true }
codec = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-script = { workspace = true }
subcoin-utxo-storage = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
cli = ["clap"]
