[package]
name = "sc-fast-sync-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
parking_lot = { workspace = true }
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
subcoin-runtime = { workspace = true }
