[package]
name = "subcoin-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
codec = { workspace = true }
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
futures = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true }
subcoin-primitives = { workspace = true }
tracing = { workspace = true }
