[package]
name = "subcoin-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
sqlx = { workspace = true }
subcoin-primitives = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
