[package]
name = "subcoin-informant"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
console = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
subcoin-network = { workspace = true }
subcoin-primitives = { workspace = true }
tracing = { workspace = true }
