[package]
name = "subcoin-mempool"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitcoin = { workspace = true }
sc-client-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
schnellru = "0.2"
slotmap = "1.0"
sp-runtime = { workspace = true }
subcoin-primitives = { workspace = true }
subcoin-script = { workspace = true }
subcoin-utxo-storage = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sp-blockchain = { workspace = true }
